--- a/trunk/NLogGUI/NLogGUI/App.xaml
+++ b/trunk/NLogGUI/NLogGUI/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="NLogGUI.App"
+﻿<Application x:Class="NoeticTools.nLogCruncher.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     StartupUri="MainWindow.xaml">
