--- a/trunk/nLogCruncher/nLogCruncher/MainWindow.xaml
+++ b/trunk/nLogCruncher/nLogCruncher/MainWindow.xaml
@@ -25,58 +25,61 @@
         <CommandBinding Command="local:EventsFormatter.SetReferenceEventCommand" CanExecute="CommandBinding_CanExecute" />
         -->
     </Window.CommandBindings>
-    
+
     <Grid>
-        <DockPanel Name="dockPanel0" LastChildFill="True">
-            
-            <ToolBarTray Background="White" DockPanel.Dock="Top">
-                <ToolBar Band="1" BandIndex="1">
-                    <Button Click="ClearButton_Click">Clear</Button>
-                    <ToggleButton Click="StartStopButton_Click">
-                        <ToggleButton.Style>
-                            <Style TargetType="{x:Type ToggleButton}">
-                                <Setter Property="Content" Value="Stop"/>
-                                <Style.Triggers>
-                                    <Trigger Property="IsChecked" Value="True">
-                                        <Setter Property="Content" Value="Start"/>
-                                    </Trigger>
-                                </Style.Triggers>
-                            </Style>
-                        </ToggleButton.Style>
-                    </ToggleButton>
-                </ToolBar>
-            </ToolBarTray>
 
-            <DockPanel Name="dockPanel" LastChildFill="True">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"/>
+            <ColumnDefinition Width="6"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
 
-                <DockPanel Height="Auto" Name="dockPanel2" Width="250" >
-                    
-                    <ListBox Height="120" Name="levelsListBox" Width="auto" DockPanel.Dock="Bottom"
+        <ToolBarTray Background="White" DockPanel.Dock="Top">
+            <ToolBar Band="1" BandIndex="1">
+                <Button Click="ClearButton_Click">Clear</Button>
+                <ToggleButton Click="StartStopButton_Click">
+                    <ToggleButton.Style>
+                        <Style TargetType="{x:Type ToggleButton}">
+                            <Setter Property="Content" Value="Stop"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsChecked" Value="True">
+                                    <Setter Property="Content" Value="Start"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ToggleButton.Style>
+                </ToggleButton>
+            </ToolBar>
+        </ToolBarTray>
+
+        <DockPanel Height="Auto" Name="dockPanel2" Width="Auto" Grid.Column="0">
+
+            <ListBox Height="120" Name="levelsListBox" Width="auto" DockPanel.Dock="Bottom"
                          ItemsSource="{x:Static Domain:EventsLog.Levels}">
-                        <ListBox.ItemTemplate>
-                            <HierarchicalDataTemplate>
-                                <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected}" Click="FilterSettingsChanged" />
-                            </HierarchicalDataTemplate>
-                        </ListBox.ItemTemplate>
-                    </ListBox>
-                    
-                    <TreeView Height="Auto" Name="namespaceTreeView" Width="auto" 
+                <ListBox.ItemTemplate>
+                    <HierarchicalDataTemplate>
+                        <CheckBox Content="{Binding Name}" IsChecked="{Binding IsSelected}" Click="FilterSettingsChanged" />
+                    </HierarchicalDataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <TreeView Height="Auto" Name="namespaceTreeView" Width="auto"
                           ItemsSource="{x:Static Domain:EventsLog.Contexts}" 
                           DockPanel.Dock="Top" Grid.IsSharedSizeScope="True">
-                        
-                        <TreeView.Resources>
-                            <Style TargetType="TreeViewItem">
-                                <Setter Property="IsExpanded" Value="True" />
-                            </Style>
-                        </TreeView.Resources>
-                        
-                        <TreeView.ItemTemplate>
-                            <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
-                                <TextBlock Text="{Binding Path=Name}" />
-                            </HierarchicalDataTemplate>
-                        </TreeView.ItemTemplate>
 
-                        <!--
+                <TreeView.Resources>
+                    <Style TargetType="TreeViewItem">
+                        <Setter Property="IsExpanded" Value="True" />
+                    </Style>
+                </TreeView.Resources>
+
+                <TreeView.ItemTemplate>
+                    <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
+                        <TextBlock Text="{Binding Path=Name}" />
+                    </HierarchicalDataTemplate>
+                </TreeView.ItemTemplate>
+
+                <!--
                         <TreeView.ContextMenu>
                             <ContextMenu>
                                 <MenuItem Header="Hide events in this context" 
@@ -86,88 +89,89 @@
                         </TreeView.ContextMenu>
                         -->
 
-                    </TreeView>
-                    
-                </DockPanel>
+            </TreeView>
 
-                <tk:DataGrid Name="eventsDataGrid" 
+        </DockPanel>
+
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch"></GridSplitter>
+
+        <tk:DataGrid Name="eventsDataGrid" 
+                             Grid.Column="2"
                              AutoGenerateColumns="False" Height="Auto" Width="Auto" 
                              ItemsSource="{x:Static nLogCruncher:MainWindow.DisplayedLogEvents}" 
                              xmlns:tk="http://schemas.microsoft.com/wpf/2008/toolkit" DockPanel.Dock="Right" 
                              BorderThickness="0" 
                              HorizontalGridLinesBrush="LightGray" VerticalGridLinesBrush="LightGray" 
                              AlternationCount="0">
-                    
-                    <tk:DataGrid.Columns>
-                        <tk:DataGridTextColumn Header="Time" Width="SizeToCells"  
+
+            <tk:DataGrid.Columns>
+                <tk:DataGridTextColumn Header="Time" Width="SizeToCells"  
                                            Binding="{Binding Path=Time, Converter={x:Static nLogCruncher:MainWindow.TimeStampConverter}}"
                                            IsReadOnly="True" MinWidth="50" />
-                        <tk:DataGridTextColumn Header="Level" Width="SizeToCells"  
+                <tk:DataGridTextColumn Header="Level" Width="SizeToCells"  
                                            Binding="{Binding Level}" 
                                            IsReadOnly="True" MinWidth="50"/>
-                        <tk:DataGridTextColumn Header="Context" Width="Auto"  
+                <tk:DataGridTextColumn Header="Context" Width="Auto"  
                                            Binding="{Binding Context.FullName}" 
                                            IsReadOnly="True" MinWidth="75"/>
-                        <tk:DataGridTextColumn Header="Message" Width="Auto"  
+                <tk:DataGridTextColumn Header="Message" Width="Auto"  
                                            Binding="{Binding Path=Self, Converter={x:Static nLogCruncher:MainWindow.EventMessageConverter}}"
                                            IsReadOnly="True" MinWidth="75"/>
-                    </tk:DataGrid.Columns>
-                    
-                    <tk:DataGrid.ContextMenu>
-                        
-                        <ContextMenu>
-                            <MenuItem Header="Reference event" 
+            </tk:DataGrid.Columns>
+
+            <tk:DataGrid.ContextMenu>
+
+                <ContextMenu>
+                    <MenuItem Header="Reference event" 
                                       Command="{x:Static nLogCruncher:MainWindow.SetReferenceEventCommand}" 
                                       CommandParameter="{Binding Path=Self}" />
-                            <Separator/>
-                            <MenuItem Header="Hide events in same context" 
+                    <Separator/>
+                    <MenuItem Header="Hide events in same context" 
                                       Command="{x:Static nLogCruncher:MainWindow.HideEventsInContextCommand}" 
                                       CommandParameter="{Binding Path=Self}" />
-                            <MenuItem Header="Hide event with this message"
+                    <MenuItem Header="Hide event with this message"
                                       Command="{x:Static nLogCruncher:MainWindow.HideMessageCommand}" 
                                       CommandParameter="{Binding Path=Self}" />
-                            <Separator/>
-                            <MenuItem Header="Show all" 
+                    <Separator/>
+                    <MenuItem Header="Show all" 
                                       Command="{x:Static nLogCruncher:MainWindow.ShowAllEventsCommand}" />
-                            <MenuItem Header="Show context depth" 
+                    <MenuItem Header="Show context depth" 
                                       Command="{x:Static nLogCruncher:MainWindow.ShowContextDepthCommand}" />
-                        </ContextMenu>
+                </ContextMenu>
 
-                    </tk:DataGrid.ContextMenu>
-                    
-                    <tk:DataGrid.Resources>
-                        <Style TargetType="tk:DataGridRow" >
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Level}" Value="Error" >
-                                    <Setter Property="Background" Value="{StaticResource ErrorEventBackground}" />
-                                    <Setter Property="Foreground" Value="{StaticResource ErrorEventForeground}" />
-                                    <Setter Property="FontWeight" Value="Bold" />
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Level}" Value="Warn" >
-                                    <Setter Property="Background" Value="{StaticResource WarningEventBackground}" />
-                                    <Setter Property="Foreground" Value="{StaticResource WarningEventForeground}" />
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Level}" Value="Info" >
-                                    <Setter Property="Background" Value="{StaticResource InfoEventBackground}" />
-                                    <Setter Property="Foreground" Value="{StaticResource InfoEventForeground}" />
-                                    <Setter Property="FontWeight" Value="Bold" />
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Level}" Value="Debug" >
-                                    <Setter Property="Background" Value="{StaticResource DebugEventBackground}" />
-                                    <Setter Property="Foreground" Value="{StaticResource DebugEventForeground}" />
-                                </DataTrigger>
-                                <DataTrigger Binding="{Binding Level}" Value="Trace" >
-                                    <Setter Property="Background" Value="{StaticResource TraceEventBackground}" />
-                                    <Setter Property="Foreground" Value="{StaticResource TraceEventForeground}" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
+            </tk:DataGrid.ContextMenu>
 
-                    </tk:DataGrid.Resources>
-                    
-                </tk:DataGrid>
-            </DockPanel>
+            <tk:DataGrid.Resources>
+                <Style TargetType="tk:DataGridRow" >
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding Level}" Value="Error" >
+                            <Setter Property="Background" Value="{StaticResource ErrorEventBackground}" />
+                            <Setter Property="Foreground" Value="{StaticResource ErrorEventForeground}" />
+                            <Setter Property="FontWeight" Value="Bold" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Level}" Value="Warn" >
+                            <Setter Property="Background" Value="{StaticResource WarningEventBackground}" />
+                            <Setter Property="Foreground" Value="{StaticResource WarningEventForeground}" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Level}" Value="Info" >
+                            <Setter Property="Background" Value="{StaticResource InfoEventBackground}" />
+                            <Setter Property="Foreground" Value="{StaticResource InfoEventForeground}" />
+                            <Setter Property="FontWeight" Value="Bold" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Level}" Value="Debug" >
+                            <Setter Property="Background" Value="{StaticResource DebugEventBackground}" />
+                            <Setter Property="Foreground" Value="{StaticResource DebugEventForeground}" />
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding Level}" Value="Trace" >
+                            <Setter Property="Background" Value="{StaticResource TraceEventBackground}" />
+                            <Setter Property="Foreground" Value="{StaticResource TraceEventForeground}" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
 
-        </DockPanel>
+            </tk:DataGrid.Resources>
+
+        </tk:DataGrid>
+
     </Grid>
 </Window>
